--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ action "filter-to-pr-open-synced" {
 action "terraform-fmt" {
   uses = "hashicorp/terraform-github-actions/fmt@v0.4.4"
   needs = "filter-to-pr-open-synced"
-  secrets = ["GITHUB_TOKEN"]
+  secrets = ["GH_TOKEN"]
   env = {
     TF_ACTION_WORKING_DIR = "."
   }
@@ -20,7 +20,7 @@ action "terraform-fmt" {
 action "terraform-init" {
   uses = "hashicorp/terraform-github-actions/init@v0.4.4"
   needs = "terraform-fmt"
-  secrets = ["GITHUB_TOKEN"]
+  secrets = ["GH_TOKEN"]
   env = {
     TF_ACTION_WORKING_DIR = "."
   }
@@ -29,7 +29,7 @@ action "terraform-init" {
 action "terraform-validate" {
   uses = "hashicorp/terraform-github-actions/validate@v0.4.4"
   needs = "terraform-init"
-  secrets = ["GITHUB_TOKEN"]
+  secrets = ["GH_TOKEN"]
   env = {
     TF_ACTION_WORKING_DIR = "."
   }
@@ -38,7 +38,7 @@ action "terraform-validate" {
 action "terraform-plan" {
   uses = "hashicorp/terraform-github-actions/plan@v0.4.4"
   needs = "terraform-validate"
-  secrets = ["GITHUB_TOKEN"]
+  secrets = ["GH_TOKEN"]
   env = {
     TF_ACTION_WORKING_DIR = "."
     # If you're using Terraform workspaces, set this to the workspace name.
